# vic2parser

./: .gitignore  dune-project  input.txt  run.sh
lib/: .merlin  List_of_conditions  conds  conds.md  dune  errors.messages  io.ml  lex  lexer.mll  main.ml  output.ml  parser.mly  run.sh  script.sh  tags  types.ml
test/: .merlin  dune
