(ocamllex
  (modules lexer)
)
;;(library
;; (name vic2_ocaml_parser))


(menhir
  (modules parser)
  (flags -lg 1 -la 1 -lc 2)
)

(executable
  (name main)
  (flags -w A-4)
  (libraries menhirLib)
)

(rule
  (action
    (with-stdout-to unitActionsParser.mly
      (run menhir
        %{dep:parser.mly}
        --only-preprocess-u
))))

(menhir
  (modules unitActionsParser)
  (flags  -v --table --external-tokens  Parser  )
)

(rule
  (action (with-stdout-to parserMessages.ml
    (run menhir
      %{dep:parser.mly}
      --compile-errors %{dep:errors.messages}
    )
  ))
)










